@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2024-08-30T01:09:35Z",
-  "count_outdated" : 237,
-  "uniques_outdated" : 171,
-  "count" : 238,
-  "uniques" : 172,
+  "timestamp" : "2024-09-15T01:17:58Z",
+  "count_outdated" : 238,
+  "uniques_outdated" : 172,
+  "count" : 241,
+  "uniques" : 175,
   "clones" : [
     {
-      "timestamp": "2024-08-20T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
+      "timestamp": "2024-09-14T00:00:00Z",
+      "count": 3,
+      "count_minmax": [ 3, 3 ],
+      "count_decinc": [ 0, 3 ],
+      "uniques": 3,
+      "uniques_minmax": [ 3, 3 ],
+      "uniques_decinc": [ 0, 3 ]
     }
   ]
 }
