@@ -1,11 +1,11 @@
 {
-  "count": 1,
-  "uniques": 1,
+  "count": 3,
+  "uniques": 3,
   "clones": [
     {
-      "timestamp": "2024-08-20T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "timestamp": "2024-09-14T00:00:00Z",
+      "count": 3,
+      "uniques": 3
     }
   ]
 }
